Add project activity tracking and restore task comments